	  pre 1.4.12-1.6.5 quota files):
		'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV',
		'tunefs.lustre --param="ost.quota_type=ug1" $MDTDEV'
		or (for 1.4.12/1.6.5 quota files)
		'tunefs.lustre --param="mdt.quota_type=ug2" $MDTDEV',
		'tunefs.lustre --param="ost.quota_type=ug2" $MDTDEV'		
	  For more information, please refer to bugzilla 13904.

Severity   : normal
Bugzilla   : 15825
Description: Kernel BUG tries to release flock
Details    : Lustre does not destroy flock lock before last reference goes
             away. So always drop flock locks when client is evicted and 
             perform unlock regardless of successfulness of speaking to MDS.

Severity   : enhancement
Bugzilla   : 16189
Description: Update to RHEL4 kernel-2.6.9-67.0.20.

Severity   : normal
Bugzilla   : 15210
Description: add refcount for osc callbacks, so avoid panic on shutdown

Severity   : normal
Bugzilla   : 12653
Description: sanity test 65a fails if stripecount of -1 is set
Details    : handle -1 striping on filesystem in ll_dirstripe_verify

Severity   : normal
Bugzilla   : 16014
Description: Kernel panic with find ost index.
Details    : lov_obd have panic if some OST's have sparse indexes.

Severity   : enhancement
Bugzilla   : 15865
Description: Update to RHEL5 kernel-2.6.18-53.1.21.el5.

Severity   : major
Bugzilla   : 15924
Description: do not process already freed flock
Details    : flock can possibly be freed by another thread before it reaches
	     to ldlm_flock_completion_ast.

Severity   : normal
Bugzilla   : 14480
Description: LBUG during stress test
Details    : Need properly lock accesses the flock deadlock detection list.

Severity   : minor
Bugzilla   : 15837
Description: oops in page fault handler
Details    : kernel page fault handler can return two special 'pages' in
	     error case, don't try dereference NOPAGE_SIGBUS and NOPAGE_OMM.

Severity   : minor
Bugzilla   : 15716
Description: timeout with invalidate import.